More UI bug fixes!
- The neutral color tailwind class had been overwritten, so  had to change the hexUI search darkening to zinc-800.
- Made sure the hexUI search bar doesn't get smaller than 640px to ensure a large search box.
- Added a scrollbar to the hexUI search list.
- Fixed the left/right top corners of the hexagons not rounding correctly due to JS magic.
- Added a class parameter in case we want to give additional data to the hexagons one day.
- Tried playing with the positioning of the hextiles to avoid tiny gaps between the hexagons, but not too lucky yet.
- Added the correct Music/Paperbin icons, instead of emojis 🎵🗑.
- Also made sure that the text/icon color would affect the icons correctly.
- Rounded off some missing sharp edges in the settings menu, like the theme select boxes. Still missing the color boxes, however those are kind of tricky as the color input doesn't like being rounded.
- Changed the theme select style to use a border rather than filling out the entire field. I didn't change both, since that would require opacity/hue changes and webview doesn't support this kind of parameter splitting sadly...
- Fixed the Apps in the layout tab scaling incorrectly - they would stop at 470px. For this I had to adjust the grid that splits the left/right panel of the settings menu. The "3x 1fr" rule works great, however if the App list was able to grow it did, which meant the leftPanel did change size when switching between the Tabs. I fixed it by sizing the panel grad via a "max(520, min(40vw, 700px)) 1fr 1fr" statement, which worked wonders.
- moved some headers/subheaders around in the new Theme Setting to make it easier to understand which header belongs to which settings. Also moved the Subheaders switch around.
- Added a switch for the entire appearanceTab (including the new Theme tab), which toggles wether only the core or the full hexagon group should be shown.

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,19 @@ body {
 .draggable {
   -webkit-app-region: drag;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #646464;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(39, 39, 39);
+  border-radius: 10px;
+}
